app/styles/app.css
/* ... */
.status-profile-img{width:22px;height:22px;vertical-align:top;}
.status-complete-wrap{line-height:0px;}
.status-complete-object{background-color:red;width:19px;height:19px;font-family:'Source Code Pro',monospace;padding-top:10px;padding-left:6px;color:#fff;}
.status-complete-dot{padding:10px;vertical-align:middle;}
div.status-inline.status-balance > p{padding:7px 10px;vertical-align:middle;}
/* --- Status bar tooltip arrow --- */
.popover.bottom>.arrow{left:50%;margin-left:-11px;border-top-width:0;border-bottom-color:#fff;top:-11px;}
.popover>.arrow{border-width:11px;}
.popover>.arrow,.popover>.arrow:after{position:absolute;display:block;width:0;height:0;border-color:rgba(0,0,0,0);border-style:solid;}
*,:after,:before{box-sizing:border-box;}
div{display:block;}
.popover{position:absolute;top:0;left:0;z-index:1060;display:none;max-width:276px;padding:1px;letter-spacing:normal;line-break:auto;line-height:1.42857143;text-align:left;text-align:start;text-decoration:none;text-shadow:none;text-transform:none;white-space:normal;word-break:normal;word-spacing:normal;word-wrap:normal;font-size:14px;background-color:#fff;background-clip:padding-box;border:1px solid #fff;border-radius:6px;box-shadow:0 5px 30px rgba(0,0,0,.2);}
*,:after,:before{box-sizing:border-box;}
.popover.bottom>.arrow:after{content:" ";top:1px;margin-left:-10px;border-top-width:0;border-bottom-color:#fff;}
.popover>.arrow:after{border-width:10px;content:"";}
.popover>.arrow,.popover>.arrow:after{position:absolute;display:block;width:0;height:0;border-color:rgba(0,0,0,0);border-style:solid;}
*,:after,:before{box-sizing:border-box;}
.popover-content{padding:25px;}
.action-item{padding-bottom:10px;margin-top:5px;margin-bottom:15px;font-family:'Lato',sans-serif;}
.tooltip-link{display:block;padding-top:8px;color:#2C96FF;}
.tooltip-link:hover,.tooltip-link:focus{display:block;padding-top:8px;color:#2C96FF;}


/* 37. Misc */
.card-list-container{width:100%;max-width:500px;margin-left:auto;margin-right:auto;padding-left:0;padding-right:0;}
.vertical-split-content{margin-top:40px;}
.sidebar-list{margin-bottom:20px;}
.sidebar-list .btn{margin-bottom:5px;}
.highlight{margin:0rem 0rem 1rem 0rem;padding:1rem;background-color:#eee;}
.highlight pre{margin-top:0;margin-bottom:0;padding:0;border:0;background-color:transparent;}
/* Home screen */
.app-box-container{display:block;min-height:1px;text-align:center;}
.app-box-wrap{width:100px;padding:0;-webkit-transition:all .5s ease-in-out;-o-transition:all .5s ease-in-out;transition:all .5s ease-in-out;}
.app-box{height:auto;margin:0.625rem auto;width:100%;margin-left:0px;margin-right:0px!important;}
.app-box img{width:72px;background-color:rgba(44,150,255,0.15);-webkit-box-shadow:0px 0px 35px 0px rgba(0,0,0,0.15);-moz-box-shadow:0px 0px 35px 0px rgba(0,0,0,0.15);box-shadow:0px 0px 35px 0px rgba(0,0,0,0.15);-moz-border-radius:15px;-webkit-border-radius:15px;border-radius:15px;}
.app-center{width:100%;-webkit-box-orient:horizontal;-webkit-box-direction:normal;}
.app-wrap{width:100%;max-width:initial;-webkit-box-orient:horizontal;-webkit-box-direction:normal;margin-top:1.625rem;}
.app-container{width:100%;display:flex;flex-wrap:wrap;-webkit-box-orient:horizontal;-webkit-box-direction:normal;flex-direction:row;justify-content:flex-start;}
div.app-text-container > h3{color:#080809;font-weight:400;font-size:0.8125rem;overflow:hidden;white-space:nowrap;text-overflow:ellipsis;margin-bottom:1.25rem;}

.capitalize{text-transform:capitalize;}
.search-result{font-weight:300;display:block;height:60px;margin-bottom:1px;color:#fff!important;border:none;border-radius:3px;background-color:#2c96ff;}
a.search-result:hover{color:#fff!important;background-color:#2275d7;}
/* Live search */
.livesearch-avatar{display:inline-block;}
.livesearch-id{display:inline-block;margin-left:10px;font-weight:400;}
.livesearch-name{display:inline-block;text-transform:capitalize;margin-left:10px;}

.result-img{width:32px;height:32px;}
.dropzone{margin-bottom: 15px;}
.dropzone-active{border: dashed 1px red;}
.dropzone div {font-size:large;text-align:center;}
.dropzone .overlay {margin: -63px 0 0 0;}
/* Modal */
div.ReactModal__Overlay.ReactModal__Overlay--after-open{background-image:none;background-repeat:no-repeat;background-position-x:center;background-position-y:center;background-size:cover;background-attachment:fixed;display:flex;align-items:center;justify-content:center;margin-top:0;}
div.ReactModal__Content.ReactModal__Content--after-open{width:415px;background-color:#FAFAFA;background-color:-webkit-linear-gradient(top,#fafafa 0%,#f2f2f2 100%);border:1px solid #FAFAFA;padding:3.75rem 42px;-webkit-box-shadow:0px 0px 25px 0px rgba(0,0,0,0.25);-moz-box-shadow:0px 0px 25px 0px rgba(0,0,0,0.25);box-shadow:0px 0px 25px 0px rgba(0,0,0,0.25);-webkit-border-radius:8px;-moz-border-radius:8px;border-radius:8px;transition:all 300ms ease-in-out;}
.modal-heading{font-size:1.375rem;color:#080809;line-height:1.85rem;margin-bottom:.5rem;text-align:center;}
.modal-body{color:#080809;line-height:1.125rem;margin-bottom:0.875rem;text-align:center;}
a.modal-body{color:#949494;font-size:0.8125rem;text-decoration:underline;line-height:1.125rem;margin:0 auto;text-align:center;display:block;}
.modal-code{font-family:'Source Code Pro',monospace;color:#616161;font-size:13px;background-color:#E6E6E6;padding:25px;-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;}
.react-modal-pgp{width:700px!important;}
/* Welcome Modal */
.welcome-modal div.ReactModal__Overlay.ReactModal__Overlay--after-open{background-color:rgba(255,255,255,0.9)!important;}
/* Auth Modal */
.auth-modal {text-align: center}
.auth-modal .profile-select{margin-bottom:20px;}
/* Add Username Modal */
.add-username-modal div div.ReactModal__Content.ReactModal__Content--after-open{width:615px;margin-top:0;}
/* ... */

